# cdi-etl

./: .gitignore  main.py  pyproject.toml
config/: settings.py
etl/extractors/: __init__.py  csv_parser.py  xml_parser.py
scripts/: anthropology_dump.py  biology_dump.py  cultures_match.py  gbif_media_dump.py  history_dump.py  mineralogy_dump.py  transform_gbif_taxonomic_backbone.py  update_airtable_counts.py
src/: pyproject.toml
src/config/: settings.py
src/etl/: __init__.py
supabase/: config.toml  remote_schema.sql
supabase/migrations/: 20250918000000_enable_extensions.sql  20250918205552_remote_schema.sql  20250919061638_anthro_catalogue.sql  20250922071740_anthro_join.sql  20250923222519_history_catalogue.sql  20251106203058_remote_schema.sql  20251120192013_remote_schema.sql  20251201113718_schema_diff.sql  20251203163843_schema_diff.sql  20251203203655_schema_diff.sql  20251217130320_schema_diff.sql  20251217165213_schema_diff.sql  20251218113619_schema_diff.sql  20251218114439_schema_diff.sql
supabase/queries/: create_anthropology_catalogue.sql  create_anthropology_catalogue_cultures.sql  create_anthropology_cultures.sql  create_biology_catalogue.sql  create_biology_catalogue_elements.sql  create_biology_elements.sql  create_biology_taxonomy.sql  create_history_catalogue.sql  create_media.sql  create_media_catalogue.sql  create_mineralogy_catalogue.sql  create_mineralogy_catalogue_taxonomy.sql  create_mineralogy_specimens.sql  (+1 more)
tests/: test_airtable_fetcher.py  test_csv_parser.py  test_culture_matcher.py  test_xml_parser.py
(+29 files in other folders)
