[project]
name = "cdi-etl"
version = "0.1.0"
description = "ETL scripts for NHMLAC Collections Data Infrastructure (CDI)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.2",
    "etl",
    "pyarrow>=21.0.0",
]


[tool.uv.sources]
etl = { path = "./src", editable = true }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
